# GKV_C_Library

./: CMakeLists.txt  README.md
Choose_Algorithm_Example/: CMakeLists.txt  Choose_Algorithm_Example.c
Choose_Algorithm_Example_linux/: CMakeLists.txt  Choose_Algorithm_Example_linux.c
GKV_Communication_Library/: CMakeLists.txt
GKV_Communication_Library/src/: GKV_AlorithmPackets.h  GKV_BasePacket.h  GKV_CommunicationLibrary.c  GKV_CommunicationLibrary.h  GKV_CustomPacket.h  GKV_FilterPacket.h  GKV_GyroOffsetPacket.h  GKV_SettingsPacket.h  GKV_TestPacket.h  README.md
Receive_ADC_Data_Example/: CMakeLists.txt  Receive_ADC_Data_Example.c
Receive_ADC_Data_Example_linux/: CMakeLists.txt  Receive_ADC_Data_Example_linux.c
Receive_Data_in_Console/: CMakeLists.txt  Receive_Data_in_Console.c
Receive_Data_in_Console_linux/: CMakeLists.txt  Receive_Data_in_Console_linux.c
